--- a/main/index.html
+++ b/main/index.html
@@ -47,7 +47,13 @@
     <br /><br />
     <button id="connectButton">Reflash Firmware USB</button><br /><br />
     <br /><br />
-    <button id="GPIOON">GPIO ON</button><br /><br />
+    <button id="GPIO_ON">GPIO ON</button>
+    <label for="pinOn">Pin number</label>
+    <input type="text" id="pinOn" name="pinOn" />
+    <br /><br />
+    <button id="GPIO_OFF">GPIO OFF</button>
+    <label for="pinOff">Pin number</label>
+    <input type="text" id="pinOff" name="pinOff" /><br /><br />
 
     <script type="text/javascript" src="code.js"></script>
   </body>
